--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,10 @@
     "unordered_set": "cpp",
     "valarray": "cpp",
     "ranges": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "cmath": "cpp",
+    "complex": "cpp",
+    "*.tcc": "cpp",
+    "numbers": "cpp"
   }
 }
